--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -20,6 +20,6 @@
    </children>
     <ChoiceBox fx:id="sortChoiceBox" layoutX="52.0" layoutY="58.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
     <Label layoutX="14.0" layoutY="63.0" text="sort:" />
-    <Label fx:id="filters" layoutX="12.0" layoutY="170.0" prefHeight="223.0" prefWidth="286.0" />
+    <ListView fx:id="filters" layoutX="14.0" layoutY="170.0" prefHeight="223.0" prefWidth="206.0" />
     <Button layoutX="52.0" layoutY="98.0" onAction="#filterMenu" prefHeight="27.0" prefWidth="206.0" text="filtering" />
 </AnchorPane>
