--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -5,10 +5,16 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ShopMenuController">
    <children>
-       <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
-      <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="249.0" layoutY="158.0" prefHeight="537.0" prefWidth="751.0" vbarPolicy="ALWAYS">
+       <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+           <menus>
+               <Menu mnemonicParsing="false" text="option">
+                   <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+               </Menu>
+           </menus>
+       </MenuBar>
+      <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="263.0" layoutY="83.0" prefHeight="612.0" prefWidth="737.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane fx:id="gridPane" prefHeight="1353.0" prefWidth="751.0">
+            <GridPane fx:id="gridPane" prefHeight="1336.0" prefWidth="723.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -16,10 +22,15 @@
               </columnConstraints>
             </GridPane>
          </content></ScrollPane>
-
+       <ChoiceBox fx:id="sortChoiceBox" layoutX="14.0" layoutY="59.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
+       <Label layoutX="29.0" layoutY="32.0" text="sort:" />
+       <ListView fx:id="filters" layoutX="14.0" layoutY="170.0" prefHeight="223.0" prefWidth="206.0" />
+       <Button layoutX="14.0" layoutY="104.0" onAction="#filterMenu" prefHeight="27.0" prefWidth="206.0" text="filtering" />
+       <ListView layoutX="1027.0" layoutY="104.0" prefHeight="498.0" prefWidth="200.0" />
+       <Label layoutX="1027.0" layoutY="72.0" prefHeight="17.0" prefWidth="116.0" text="Available Categories" />
+       <Separator layoutX="227.0" layoutY="28.0" orientation="VERTICAL" prefHeight="664.0" prefWidth="23.0" />
+       <Separator layoutX="1004.0" layoutY="25.0" orientation="VERTICAL" prefHeight="664.0" prefWidth="3.0" />
+       <Label fx:id="categoryLabel" layoutX="425.0" layoutY="46.0" prefHeight="27.0" prefWidth="431.0" text="Label" />
    </children>
-    <ChoiceBox fx:id="sortChoiceBox" layoutX="52.0" layoutY="58.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
-    <Label layoutX="14.0" layoutY="63.0" text="sort:" />
-    <ListView fx:id="filters" layoutX="14.0" layoutY="170.0" prefHeight="223.0" prefWidth="206.0" />
-    <Button layoutX="52.0" layoutY="98.0" onAction="#filterMenu" prefHeight="27.0" prefWidth="206.0" text="filtering" />
+
 </AnchorPane>
