realtime filter fix

--- a/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
@@ -18,6 +18,45 @@
     <ListView fx:id="listView" layoutY="36.0" onMouseClicked="#itemSelect" prefHeight="375.0" prefWidth="502.0" />
     <ChoiceBox fx:id="sortChoiceBox" layoutX="564.0" layoutY="83.0" onAction="#sort" prefHeight="27.0" prefWidth="206.0" />
     <Label layoutX="520.0" layoutY="88.0" text="sort:" />
-    <ListView fx:id="filters" layoutX="522.0" layoutY="184.0" prefHeight="223.0" prefWidth="286.0" />
-    <Button layoutX="564.0" layoutY="120.0" onAction="#filterMenu" prefHeight="27.0" prefWidth="206.0" text="filtering" />
+
+    <Pane layoutX="520.0" layoutY="125.0" prefHeight="343.0" prefWidth="323.0">
+        <CheckBox fx:id="availableCheckBox" layoutX="14.0" layoutY="14.0" onMouseClicked="#filterAvailibility" />
+        <Label layoutX="39.0" layoutY="14.0" text="filter availaibility" />
+
+
+        <CheckBox fx:id="categoryNameCheckBox" layoutX="14.0" layoutY="44.0" onMouseClicked="#filterCategoryName" />
+        <Label layoutX="40.0" layoutY="44.0" text="category name:" />
+        <TextField fx:id="categoryName" layoutX="132.0" layoutY="39.0" />
+
+
+        <CheckBox fx:id="brandNameCheckBox" layoutX="14.0" layoutY="85.0" onMouseClicked="#filterBrandName" />
+        <Label layoutX="55.0" layoutY="85.0" text="brandName:" />
+        <TextField fx:id="brandName" layoutX="132.0" layoutY="80.0" />
+
+
+        <CheckBox fx:id="searchCheckBox" layoutX="14.0" layoutY="130.0" onMouseClicked="#filterSearch" />
+        <Label layoutX="82.0" layoutY="130.0" text="search:" />
+        <TextField fx:id="search" layoutX="132.0" layoutY="125.0" />
+
+
+        <CheckBox fx:id="priceCheckBox" layoutX="14.0" layoutY="176.0" onMouseClicked="#priceFilter" />
+        <Label layoutX="87.0" layoutY="176.0" text="price:" />
+        <Label layoutX="132.0" layoutY="176.0" prefHeight="17.0" prefWidth="30.0" text="min" />
+        <Label layoutX="212.0" layoutY="176.0" text="max" />
+        <TextField fx:id="maxPrice" layoutX="252.0" layoutY="171.0" prefHeight="27.0" prefWidth="40.0" />
+        <TextField fx:id="minPrice" layoutX="162.0" layoutY="171.0" prefHeight="27.0" prefWidth="40.0" />
+
+
+
+        <CheckBox fx:id="attributeCheckBox" layoutX="14.0" layoutY="237.0" onMouseClicked="#attributeFilter" />
+        <Label layoutX="41.0" layoutY="255.0" text="attribute value:" />
+        <Label layoutX="47.0" layoutY="214.0" text="attribute key:" />
+        <TextField fx:id="attributeKey" layoutX="132.0" layoutY="209.0" />
+        <TextField fx:id="attributeValue" layoutX="132.0" layoutY="250.0" />
+
+
+        <CheckBox fx:id="sellerNameCheckBox" layoutX="14.0" layoutY="309.0" onMouseClicked="#sellerFilter" />
+        <Label layoutX="54.0" layoutY="309.0" text="seller name:" />
+        <TextField fx:id="sellerName" layoutX="132.0" layoutY="304.0" />
+    </Pane>
 </AnchorPane>
