--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -1,24 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.media.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.ItemMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
+<AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ItemMenuController">
+    <children>
 
-    <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
-        <menus>
-            <Menu mnemonicParsing="false" text="option">
-
-
-
-            </Menu>
-        </menus>
-    </MenuBar>
+        <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+            <menus>
+                <Menu mnemonicParsing="false" text="option">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#back" text="Back" />
+                    </items></Menu>
+            </menus>
+        </MenuBar>
+        <ImageView fx:id="itemImage" fitHeight="339.0" fitWidth="340.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" />
+        <Label layoutX="28.0" layoutY="392.0" prefHeight="17.0" prefWidth="36.0" text="name:" />
+        <Label fx:id="itemNameLabel" layoutX="72.0" layoutY="392.0" prefHeight="17.0" prefWidth="261.0" />
+        <Label fx:id="itemNameLabelBigFont" layoutX="371.0" layoutY="43.0" prefHeight="39.0" prefWidth="396.0">
+            <font>
+                <Font size="27.0" />
+            </font>
+        </Label>
+        <Label layoutX="383.0" layoutY="113.0" prefHeight="17.0" prefWidth="56.0" text="Category:" />
+        <Label fx:id="categoryLabel" layoutX="439.0" layoutY="113.0" prefHeight="17.0" prefWidth="252.0" />
+        <Label layoutX="389.0" layoutY="161.0" prefHeight="17.0" prefWidth="36.0" text="Brand:" />
+        <Label fx:id="brandLabel" layoutX="425.0" layoutY="161.0" prefHeight="17.0" prefWidth="333.0" />
+        <Label layoutX="386.0" layoutY="212.0" prefHeight="17.0" prefWidth="43.0" text="Seller:" />
+        <Label fx:id="sellerLabel" layoutX="430.0" layoutY="212.0" prefHeight="17.0" prefWidth="340.0" />
+        <Separator layoutX="382.0" layoutY="131.0" prefHeight="17.0" prefWidth="387.0" />
+        <Separator layoutX="385.0" layoutY="187.0" prefHeight="10.0" prefWidth="387.0" />
+        <Separator layoutX="380.0" layoutY="92.0" prefHeight="10.0" prefWidth="387.0" />
+        <Separator layoutX="385.0" layoutY="236.0" prefHeight="17.0" prefWidth="387.0" />
+        <Label layoutX="385.0" layoutY="261.0" prefHeight="17.0" prefWidth="36.0" text="Stock:" />
+        <Label fx:id="stockLabel" layoutX="422.0" layoutY="261.0" prefHeight="17.0" prefWidth="340.0" />
+        <Separator layoutX="389.0" layoutY="294.0" prefHeight="0.0" prefWidth="387.0" />
+        <Label layoutX="28.0" layoutY="442.0" prefHeight="17.0" prefWidth="36.0" text="price:" />
+        <Label fx:id="priceLabel" layoutX="58.0" layoutY="442.0" prefHeight="17.0" prefWidth="245.0" />
+        <Label layoutX="28.0" layoutY="501.0" text="Grade:" />
+        <Label fx:id="gradeLabel" layoutX="64.0" layoutY="501.0" prefHeight="17.0" prefWidth="93.0" />
+        <Label alignment="CENTER" layoutX="383.0" layoutY="311.0" prefHeight="30.0" prefWidth="396.0" text="Attributes:">
+            <font>
+                <Font size="20.0" />
+            </font>
+        </Label>
+        <Separator layoutX="365.0" layoutY="25.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="4.0" />
+        <Button layoutX="19.0" layoutY="630.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="59.0" prefWidth="183.0" text="Add to Cart" />
+        <Label layoutX="32.0" layoutY="559.0" prefHeight="17.0" prefWidth="35.0" text="View:" />
+        <Label fx:id="viewLabel" layoutX="64.0" layoutY="559.0" prefHeight="17.0" prefWidth="56.0" />
+        <ListView fx:id="commentListView" layoutX="836.0" layoutY="278.0" prefHeight="324.0" prefWidth="410.0" />
+        <Button layoutX="836.0" layoutY="617.0" mnemonicParsing="false" onAction="#rate" prefHeight="72.0" prefWidth="165.0" text="Rate Item" />
+        <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="410.0" layoutX="836.0" layoutY="30.0" />
+        <ToolBar layoutX="836.0" layoutY="233.0" prefHeight="40.0" prefWidth="410.0">
+            <items>
+                <Button fx:id="playPause" mnemonicParsing="false" onAction="#playPauseButtonPressed" prefHeight="25.0" prefWidth="65.0" />
+            </items>
+        </ToolBar>
+        <Button layoutX="1060.0" layoutY="614.0" mnemonicParsing="false" onAction="#comment" prefHeight="72.0" prefWidth="183.0" text="add Comment" />
+    </children>
 
 </AnchorPane>
