--- a/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerAddOff"
-            prefHeight="720.0" prefWidth="1280.0">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerAddOff">
 
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
             <Menu mnemonicParsing="false" text="option">
-
                 <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                 <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
             </Menu>
         </menus>
     </MenuBar>
+   <TextField fx:id="offPercentage" layoutX="160.0" layoutY="116.0" prefHeight="25.0" prefWidth="157.0" promptText="Enter an Integer" />
+   <Label layoutX="64.0" layoutY="120.0" prefHeight="17.0" prefWidth="81.0" text="Off Percentage" />
+   <DatePicker fx:id="startDate" layoutX="160.0" layoutY="176.0" prefHeight="25.0" prefWidth="157.0" />
+   <Label layoutX="93.0" layoutY="180.0" prefHeight="17.0" prefWidth="52.0" text="Starts at" />
+   <DatePicker fx:id="endDate" layoutX="160.0" layoutY="238.0" prefHeight="25.0" prefWidth="157.0" />
+   <Label layoutX="91.0" layoutY="242.0" prefHeight="17.0" prefWidth="52.0" text="Ends at" />
+   <Label text="Label" />
+   <Label layoutX="160.0" layoutY="42.0" prefHeight="43.0" prefWidth="157.0" text="Enter Sale Details" />
+   <Separator layoutX="383.0" layoutY="35.0" orientation="VERTICAL" prefHeight="406.0" prefWidth="8.0" />
+   <ListView fx:id="allItems" layoutX="463.0" layoutY="88.0" prefHeight="350.0" prefWidth="250.0" />
+   <Label layoutX="463.0" layoutY="55.0" prefHeight="17.0" prefWidth="167.0" text="Click on items to include them" />
+   <Separator layoutX="775.0" layoutY="35.0" orientation="VERTICAL" prefHeight="406.0" prefWidth="14.0" />
+   <ListView fx:id="saleItems" layoutX="860.0" layoutY="89.0" prefHeight="350.0" prefWidth="243.0" />
+   <Label layoutX="860.0" layoutY="55.0" prefHeight="17.0" prefWidth="140.0" text="Items that will be added:" />
+   <Button layoutX="337.0" layoutY="610.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Create Sale" />
 
 </AnchorPane>
