--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -15,6 +15,7 @@
                   <items>
                       <MenuItem mnemonicParsing="false" onAction="#manageProducts" text="Manage Products" />
                       <MenuItem mnemonicParsing="false" onAction="#addProduct" text="Add Product" />
+                      <MenuItem mnemonicParsing="false" onAction="#manageSales" text="Manage Sales" />
                       <MenuItem mnemonicParsing="false" onAction="#viewSalesHistory" text="View Sales History" />
                       <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
                       <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
