--- a/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerAddOff.fxml
@@ -21,11 +21,13 @@
    <Label layoutX="91.0" layoutY="242.0" prefHeight="17.0" prefWidth="52.0" text="Ends at" />
    <Label layoutX="160.0" layoutY="42.0" prefHeight="43.0" prefWidth="157.0" text="Enter Sale Details" />
    <Separator layoutX="383.0" layoutY="35.0" orientation="VERTICAL" prefHeight="406.0" prefWidth="8.0" />
-   <ListView fx:id="allItems" layoutX="463.0" layoutY="88.0" prefHeight="350.0" prefWidth="250.0" />
+   <ListView fx:id="allItems" layoutX="463.0" layoutY="88.0" onMouseClicked="#selectItem" prefHeight="350.0" prefWidth="250.0" />
    <Label layoutX="463.0" layoutY="55.0" prefHeight="17.0" prefWidth="167.0" text="Click on items to include them" />
    <Separator layoutX="775.0" layoutY="35.0" orientation="VERTICAL" prefHeight="406.0" prefWidth="14.0" />
    <ListView fx:id="saleItems" layoutX="860.0" layoutY="89.0" prefHeight="350.0" prefWidth="243.0" />
    <Label layoutX="860.0" layoutY="55.0" prefHeight="17.0" prefWidth="140.0" text="Items that will be added:" />
-   <Button layoutX="337.0" layoutY="610.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" text="Create Sale" />
+   <Button layoutX="337.0" layoutY="610.0" mnemonicParsing="false" onAction="#createSale" prefHeight="25.0" prefWidth="100.0" text="Create Sale" />
+   <Label fx:id="errorLabel" layoutX="91.0" layoutY="318.0" prefHeight="17.0" prefWidth="250.0" />
+   <Button layoutX="161.0" layoutY="360.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="100.0" text="Clear All" />
 
 </AnchorPane>
