--- a/src/main/resources/fxml/SellerMenu/SellerEditOff.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerEditOff.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerEditOff"
-            prefHeight="720.0" prefWidth="1280.0">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerEditOff">
 
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
@@ -20,5 +15,19 @@
             </Menu>
         </menus>
     </MenuBar>
+   <Text layoutX="365.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Off Percentage:" wrappingWidth="143.13671875" />
+   <Text layoutX="365.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Starting Date:" wrappingWidth="130.13671875" />
+   <Text layoutX="365.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Ending Date:" wrappingWidth="143.13672065734863" />
+   <Text fx:id="currentOffPercent" layoutX="508.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="121.13671875" />
+   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+   <Text fx:id="currentStartDate" layoutX="508.0" layoutY="225.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="121.13671660423279" />
+   <Text fx:id="currentEndDate" layoutX="508.0" layoutY="317.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="121.136714220047" />
+   <TextField fx:id="newOffPercent" layoutX="668.0" layoutY="129.0" />
+   <DatePicker fx:id="newStartDate" layoutX="668.0" layoutY="208.0" prefHeight="25.0" prefWidth="149.0" />
+   <DatePicker fx:id="newEndDate" layoutX="668.0" layoutY="300.0" prefHeight="25.0" prefWidth="149.0" />
+   <Button layoutX="846.0" layoutY="129.0" mnemonicParsing="false" onAction="#editOffPercent" text="Edit" />
+   <Button layoutX="846.0" layoutY="208.0" mnemonicParsing="false" onAction="#editStartDate" text="Edit" />
+   <Button layoutX="846.0" layoutY="300.0" mnemonicParsing="false" onAction="#editEndDate" text="Edit" />
+   <Button layoutX="614.0" layoutY="457.0" mnemonicParsing="false" onAction="#back" text="Back" />
 
 </AnchorPane>
