--- a/src/main/resources/fxml/CartMenu.fxml
+++ b/src/main/resources/fxml/CartMenu.fxml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.CartMenuController">
+<AnchorPane prefHeight="420.0" prefWidth="620.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.CartMenuController">
    <children>
-       <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
-       <MenuBar prefHeight="25.0" prefWidth="1280.0">
-           <menus>
-               <Menu mnemonicParsing="false" text="Options">
-                   <items>
-                       <MenuItem mnemonicParsing="false" onAction="#goToUserZone" text="User Zone" />
-                       <MenuItem mnemonicParsing="false" onAction="#goToDiscountCodes" text="View Discount Codes" />
-                       <MenuItem mnemonicParsing="false" onAction="#goToShopMenu" text="Shop Menu" />
-                       <MenuItem mnemonicParsing="false" onAction="#goToDiscounts" text="Discounts" />
-                       <MenuItem mnemonicParsing="false" onAction="#goToBuyerOrders" text="View Orders" />
-                  <MenuItem mnemonicParsing="false" text="Edit" onAction="#viewEditPersonalInfo"/>
-                       <MenuItem mnemonicParsing="false" onAction="#logout" text="Logout" />
-                       <MenuItem mnemonicParsing="false" onAction="#Exit" text="Exit" />
-                   </items>
-               </Menu>
-               <Menu mnemonicParsing="false" text="Help">
-                   <items>
-                       <MenuItem mnemonicParsing="false" text="About" />
-                   </items>
-               </Menu>
-           </menus>
-       </MenuBar>
+      <ListView layoutX="96.0" layoutY="52.0" prefHeight="262.0" prefWidth="429.0" fx:id="itemListView"/>
+      <Button layoutX="200.0" layoutY="346.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="220.0" text="Buy" onAction="#buy" />
+      <Button layoutX="23.0" layoutY="54.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="53.0" text="+" onAction="#increaseItem">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Button>
+      <Button layoutX="30.0" layoutY="218.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="53.0" text="-" onAction="#decreaseItem">
+         <font>
+            <Font size="22.0" />
+         </font>
+      </Button>
+      <Button layoutX="531.0" layoutY="54.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="71.0" text="show Item" onAction="#showItem" />
+      <Button layoutX="534.0" layoutY="217.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="79.0" text="clear Cart"  onAction="#clearCartPressed"/>
+      <Label alignment="CENTER" layoutX="148.0" layoutY="14.0" prefHeight="17.0" prefWidth="325.0" text="Cart Menu">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
    </children>
 
 
