sale filter added / error message fix / back logic fix

--- a/src/main/resources/fxml/AdminMenu/ManageProducts.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageProducts.fxml
@@ -54,6 +54,9 @@
         <CheckBox fx:id="sellerNameCheckBox" onMouseClicked="#sellerFilter" layoutX="14.0" layoutY="309.0" />
         <Label layoutX="54.0" layoutY="309.0" text="seller name:" />
         <TextField fx:id="sellerName" layoutX="132.0" layoutY="304.0" />
+
+        <CheckBox fx:id="filterSaleCheckBox" layoutX="138.0" layoutY="14.0" onMouseClicked="#saleFilter" />
+        <Label layoutX="175.0" layoutY="14.0" text="filter sale"  />
     </Pane>
 
 </AnchorPane>
