--- a/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
@@ -58,5 +58,8 @@
         <CheckBox fx:id="sellerNameCheckBox" layoutX="14.0" layoutY="309.0" onMouseClicked="#sellerFilter" />
         <Label layoutX="54.0" layoutY="309.0" text="seller name:" />
         <TextField fx:id="sellerName" layoutX="132.0" layoutY="304.0" />
+
+        <CheckBox fx:id="filterSaleCheckBox" layoutX="138.0" layoutY="14.0" onMouseClicked="#saleFilter"/>
+        <Label layoutX="175.0" layoutY="14.0" text="filter sale"  />
     </Pane>
 </AnchorPane>
