--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -30,51 +30,55 @@
        <Separator layoutX="1004.0" layoutY="25.0" orientation="VERTICAL" prefHeight="664.0" prefWidth="3.0" />
        <Label fx:id="categoryLabel" layoutX="263.0" layoutY="46.0" prefHeight="27.0" prefWidth="431.0" text="Label" />
 
-       <Pane layoutX="6.0" layoutY="110.0" prefHeight="343.0" prefWidth="323.0">
-           <CheckBox fx:id="availableCheckBox" layoutX="14.0" layoutY="14.0" onMouseClicked="#filterAvailibility" />
-           <Label layoutX="39.0" layoutY="14.0" text="filter availaibility" />
+       <Pane layoutX="6.0" layoutY="110.0" prefHeight="489.0" prefWidth="225.0">
+           <CheckBox fx:id="availableCheckBox" layoutX="22.0" layoutY="76.0" onMouseClicked="#filterAvailibility" />
+           <Label layoutX="38.0" layoutY="76.0" text="filter availaibility" />
 
 
-           <CheckBox fx:id="categoryNameCheckBox" layoutX="14.0" layoutY="44.0" onMouseClicked="#filterCategoryName" />
-           <Label layoutX="40.0" layoutY="44.0" text="category name:" />
-           <TextField fx:id="categoryNameFilter" layoutX="132.0" layoutY="39.0" />
+           <CheckBox fx:id="categoryNameCheckBox" layoutX="22.0" layoutY="295.0" onMouseClicked="#filterCategoryName" />
+           <Label layoutX="46.0" layoutY="295.0" text="category name:" />
+           <TextField fx:id="categoryNameFilter" layoutX="20.0" layoutY="324.0" />
 
 
-           <CheckBox fx:id="brandNameCheckBox" layoutX="14.0" layoutY="85.0" onMouseClicked="#filterBrandName" />
-           <Label layoutX="55.0" layoutY="85.0" text="brandName:" />
-           <TextField fx:id="brandName" layoutX="132.0" layoutY="80.0" />
+           <CheckBox fx:id="brandNameCheckBox" layoutX="22.0" layoutY="359.0" onMouseClicked="#filterBrandName" />
+           <Label layoutX="48.0" layoutY="359.0" text="brandName:" />
+           <TextField fx:id="brandName" layoutX="20.0" layoutY="387.0" />
 
 
-           <CheckBox fx:id="searchCheckBox" layoutX="14.0" layoutY="130.0" onMouseClicked="#filterSearch" />
-           <Label layoutX="82.0" layoutY="130.0" text="search:" />
-           <TextField fx:id="search" layoutX="132.0" layoutY="125.0" />
+           <CheckBox fx:id="searchCheckBox" layoutX="22.0" layoutY="14.0" onMouseClicked="#filterSearch" />
+           <Label layoutX="41.0" layoutY="14.0" text="search:" />
+           <TextField fx:id="search" layoutX="20.0" layoutY="41.0" />
 
 
-           <CheckBox fx:id="priceCheckBox" layoutX="14.0" layoutY="176.0" onMouseClicked="#priceFilter" />
-           <Label layoutX="87.0" layoutY="176.0" text="price:" />
-           <Label layoutX="132.0" layoutY="176.0" prefHeight="17.0" prefWidth="30.0" text="min" />
-           <Label layoutX="212.0" layoutY="176.0" text="max" />
-           <TextField fx:id="maxPrice" layoutX="252.0" layoutY="171.0" prefHeight="27.0" prefWidth="40.0" />
-           <TextField fx:id="minPrice" layoutX="162.0" layoutY="171.0" prefHeight="27.0" prefWidth="40.0" />
+           <CheckBox fx:id="priceCheckBox" layoutX="22.0" layoutY="106.0" onMouseClicked="#priceFilter" />
+           <Label layoutX="45.0" layoutY="106.0" text="price:" />
+           <Label layoutX="15.0" layoutY="133.0" prefHeight="17.0" prefWidth="30.0" text="min" />
+           <Label layoutX="116.0" layoutY="133.0" text="max" />
+           <TextField fx:id="maxPrice" layoutX="149.0" layoutY="128.0" prefHeight="27.0" prefWidth="63.0" />
+           <TextField fx:id="minPrice" layoutX="42.0" layoutY="129.0" prefHeight="25.0" prefWidth="63.0" />
 
 
 
-           <CheckBox fx:id="attributeCheckBox" layoutX="14.0" layoutY="237.0" onMouseClicked="#attributeFilter" />
-           <Label layoutX="41.0" layoutY="255.0" text="attribute value:" />
-           <Label layoutX="47.0" layoutY="214.0" text="attribute key:" />
-           <TextField fx:id="attributeKey" layoutX="132.0" layoutY="209.0" />
-           <TextField fx:id="attributeValue" layoutX="132.0" layoutY="250.0" />
+           <CheckBox fx:id="attributeCheckBox" layoutX="22.0" layoutY="168.0" onMouseClicked="#attributeFilter" />
+           <Label layoutX="24.0" layoutY="236.0" text="attribute value:" />
+           <Label layoutX="24.0" layoutY="192.0" text="attribute key:" />
+           <TextField fx:id="attributeKey" layoutX="19.0" layoutY="209.0" />
+           <TextField fx:id="attributeValue" layoutX="20.0" layoutY="253.0" />
 
 
-           <CheckBox fx:id="sellerNameCheckBox" layoutX="14.0" layoutY="309.0" onMouseClicked="#sellerFilter" />
-           <Label layoutX="54.0" layoutY="309.0" text="seller name:" />
-           <TextField fx:id="sellerName" layoutX="132.0" layoutY="304.0" />
+           <CheckBox fx:id="sellerNameCheckBox" layoutX="22.0" layoutY="422.0" onMouseClicked="#sellerFilter" />
+           <Label layoutX="49.0" layoutY="422.0" text="seller name:" />
+           <TextField fx:id="sellerName" layoutX="20.0" layoutY="450.0" />
 
-           <CheckBox fx:id="filterSale" layoutX="138.0" layoutY="14.0" onMouseClicked="#saleFilter" />
-           <Label layoutX="175.0" layoutY="14.0" text="filter sale" />
+           <CheckBox fx:id="filterSale" layoutX="132.0" layoutY="76.0" onMouseClicked="#saleFilter" />
+           <Label layoutX="157.0" layoutY="76.0" text="filter sale" />
+         <Label layoutX="45.0" layoutY="168.0" prefHeight="17.0" prefWidth="65.0" text="attributes:" />
        </Pane>
       <Label layoutX="1027.0" layoutY="436.0" prefHeight="17.0" prefWidth="116.0" text="Subcategories" />
       <ListView fx:id="subCat" layoutX="1027.0" layoutY="453.0" onMouseClicked="#categorySelectFromSubs" prefHeight="241.0" prefWidth="200.0" />
+      <Label fx:id="pageNum" layoutX="618.0" layoutY="672.0" prefHeight="27.0" prefWidth="30.0" text="1" textAlignment="CENTER" />
+      <Button fx:id="pageNumReduce" layoutX="569.0" layoutY="672.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="30.0" text="-" />
+      <Button fx:id="pageNumAdd" layoutX="668.0" layoutY="673.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="29.0" text="+" />
        
    </children>
 
