--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -19,7 +19,7 @@
                     </items></Menu>
             </menus>
         </MenuBar>
-        <ImageView fx:id="itemImage" fitHeight="339.0" fitWidth="340.0" layoutX="11.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fx:id="itemImage" fitHeight="200.0" fitWidth="200.0" layoutX="60.0" layoutY="90.0" onMouseExited="#removeImage" onMouseMoved="#zoom" pickOnBounds="true" preserveRatio="true" />
         <Label layoutX="28.0" layoutY="392.0" prefHeight="17.0" prefWidth="36.0" text="name:" />
         <Label fx:id="itemNameLabel" layoutX="72.0" layoutY="392.0" prefHeight="17.0" prefWidth="261.0" />
         <Label fx:id="itemNameLabelBigFont" layoutX="371.0" layoutY="43.0" prefHeight="39.0" prefWidth="396.0">
@@ -73,5 +73,6 @@
       <Separator layoutX="362.0" layoutY="22.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="6.0" />
       <Separator layoutX="792.0" layoutY="22.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="6.0" />
       <Separator layoutX="818.0" layoutY="277.0" prefHeight="3.0" prefWidth="433.0" />
+      <ImageView fx:id="ivTarget" fitHeight="473.0" fitWidth="365.0" layoutX="396.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
