--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -44,7 +44,7 @@
         <Label fx:id="priceLabel" layoutX="58.0" layoutY="442.0" prefHeight="17.0" prefWidth="245.0" />
         <Label layoutX="28.0" layoutY="501.0" text="Grade:" />
         <Label fx:id="gradeLabel" layoutX="64.0" layoutY="501.0" prefHeight="17.0" prefWidth="93.0" />
-        <Label alignment="CENTER" layoutX="383.0" layoutY="311.0" prefHeight="30.0" prefWidth="396.0" text="Attributes:">
+        <Label alignment="CENTER" layoutX="345.0" layoutY="332.0" prefHeight="30.0" prefWidth="396.0" text="Attributes:">
             <font>
                 <Font size="20.0" />
             </font>
@@ -53,27 +53,28 @@
         <Button layoutX="19.0" layoutY="679.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="30.0" prefWidth="131.0" text="Add to Cart" />
         <Label layoutX="32.0" layoutY="559.0" prefHeight="17.0" prefWidth="35.0" text="View:" />
         <Label fx:id="viewLabel" layoutX="64.0" layoutY="559.0" prefHeight="17.0" prefWidth="56.0" />
-        <ListView fx:id="commentListView" layoutX="836.0" layoutY="310.0" prefHeight="324.0" prefWidth="410.0" />
+        <ListView fx:id="commentListView" layoutX="752.0" layoutY="315.0" prefHeight="324.0" prefWidth="320.0" />
         <Button layoutX="170.0" layoutY="679.0" mnemonicParsing="false" onAction="#rate" prefHeight="30.0" prefWidth="165.0" text="Rate Item" />
-        <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="410.0" layoutX="836.0" layoutY="30.0" />
-        <ToolBar layoutX="836.0" layoutY="233.0" prefHeight="40.0" prefWidth="410.0">
+        <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="320.0" layoutX="772.0" layoutY="30.0" />
+        <ToolBar layoutX="767.0" layoutY="233.0" prefHeight="40.0" prefWidth="320.0">
             <items>
                 <Button fx:id="playPause" mnemonicParsing="false" onAction="#playPauseButtonPressed" prefHeight="25.0" prefWidth="65.0" text="Play" />
             </items>
         </ToolBar>
-        <Button layoutX="1063.0" layoutY="647.0" mnemonicParsing="false" onAction="#comment" prefHeight="48.0" prefWidth="183.0" text="add Comment" />
+        <Button layoutX="810.0" layoutY="647.0" mnemonicParsing="false" onAction="#comment" prefHeight="48.0" prefWidth="183.0" text="add Comment" />
 
         <Polygon fx:id="star1" fill="#AAAAAA" layoutX="25.0" layoutY="635.0" onMouseClicked="#star1Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star2" fill="#AAAAAA" layoutX="60" layoutY="635" onMouseClicked="#star2Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star3" fill="#AAAAAA" layoutX="95" layoutY="635" onMouseClicked="#star3Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star4" fill="#AAAAAA" layoutX="130" layoutY="635" onMouseClicked="#star4Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
         <Polygon fx:id="star5" fill="#AAAAAA" layoutX="165" layoutY="635" onMouseClicked="#star5Update" points="20,4.006 ,23.97,16.224 ,36.814,16.224, 26.424,23.774 ,30.392,35.992 ,20,28.442, 9.606,35.992 ,13.578,23.774 ,3.184,16.224 ,16.03,16.224" />
-      <ListView fx:id="attributeListView" layoutX="392.0" layoutY="359.0" prefHeight="279.0" prefWidth="387.0" />
-      <Label layoutX="836.0" layoutY="286.0" prefHeight="17.0" prefWidth="146.0" text="all Comments" />
+      <ListView fx:id="attributeListView" layoutX="349.0" layoutY="362.0" prefHeight="279.0" prefWidth="387.0" />
+      <Label layoutX="798.0" layoutY="286.0" prefHeight="17.0" prefWidth="146.0" text="all Comments" />
       <Separator layoutX="362.0" layoutY="22.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="6.0" />
       <Separator layoutX="792.0" layoutY="22.0" orientation="VERTICAL" prefHeight="698.0" prefWidth="6.0" />
-      <Separator layoutX="818.0" layoutY="277.0" prefHeight="3.0" prefWidth="433.0" />
-      <ImageView fx:id="ivTarget" fitHeight="473.0" fitWidth="365.0" layoutX="396.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true" />
+      <Separator layoutX="767.0" layoutY="277.0" prefHeight="3.0" prefWidth="320.0" />
+      <ImageView fx:id="ivTarget" fitHeight="473.0" fitWidth="365.0" layoutX="349.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="messageImageView" fitHeight="76.0" fitWidth="93.0" layoutX="167.0" layoutY="211.0" pickOnBounds="true" preserveRatio="true" />
+      <ListView fx:id="familyItemListView" layoutX="1084.0" layoutY="25.0" prefHeight="698.0" prefWidth="207.0" onMouseClicked="#showItem" />
     </children>
 </AnchorPane>
