--- a/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
+++ b/src/main/resources/fxml/AdminMenu/ManageRequests.fxml
@@ -3,11 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
-    <MenuBar >
+<AnchorPane prefHeight="348.0" prefWidth="805.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.ManageRequests">
+    <MenuBar>
         <Menu text="options">
-            <MenuItem text="back" onAction="#back"></MenuItem>
+            <MenuItem onAction="#back" text="back" />
         </Menu>
     </MenuBar>
-      <ListView layoutY="36.0" prefHeight="283.0" prefWidth="502.0" fx:id="listView" onMouseClicked="#requestSelect"/>
+      <ListView fx:id="listView" layoutY="36.0" onMouseClicked="#requestSelect" prefHeight="283.0" prefWidth="502.0" />
 </AnchorPane>
