--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerMenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerMenuController">
    <children>
    
        <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
            <menus>
                <Menu mnemonicParsing="false" text="option">
                   <items>
-                      <MenuItem mnemonicParsing="false" onAction="#viewCart" text="View Cart" />
                       <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
-                      <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
-                  <MenuItem mnemonicParsing="false" text="Edit" onAction="#viewEditPersonalInfo" />
                       <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
                   </items>
                </Menu>
+               <Menu text="view">
+                   <MenuItem mnemonicParsing="false" onAction="#viewEditPersonalInfo" text="Edit" />
+                   <MenuItem mnemonicParsing="false" onAction="#viewCart" text="View Cart" />
+                   <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
+                   <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
+               </Menu>
            </menus>
        </MenuBar>
-      <ImageView fx:id="userImage" fitHeight="170.0" fitWidth="201.0" layoutX="24.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="userImage" fitHeight="170.0" fitWidth="201.0" layoutX="245.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true" />
       <BorderPane layoutX="48.0" layoutY="328.0" prefHeight="200.0" prefWidth="475.0" />
+       <Label fx:id="personalInfo" layoutX="26.0" layoutY="39.0" prefHeight="161.0" prefWidth="190.0" />
    </children>
 
 </AnchorPane>
