--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerMenuController">
    <children>
        <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
            <menus>
@@ -20,13 +17,14 @@
                       <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
                       <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
                       <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
-                      <MenuItem text="edit personal info" onAction="#editPersonalInfo"></MenuItem>
+                      <MenuItem onAction="#editPersonalInfo" text="edit personal info" />
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
                   </items>
                </Menu>
            </menus>
        </MenuBar>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="79.0" pickOnBounds="true" preserveRatio="true" fx:id="sellerImage" />
+      <ImageView fx:id="sellerImage" fitHeight="150.0" fitWidth="200.0" layoutX="223.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true" />
+       <Label fx:id="personalInfo" layoutX="14.0" layoutY="42.0" prefHeight="158.0" prefWidth="190.0" />
    </children>
 
 </AnchorPane>
